# claude-code-manim-skill

./: .gitignore  README.md  pyproject.toml
src/three_b1b/: __init__.py  _shared.py  cli.py  compose_voiceover.py  edit_scene.py  from_slides.py  generate.py  kokoro_bridge.py  mathcode_bridge.py  prompts.py  remix_audience.py  voiceover.py
src/three_b1b/skill/: SKILL.md
src/three_b1b/skill/rules/: animations.md  color-palettes.md  config-rendering.md  equations.md  graphs-plots.md  mobjects.md  paper-explainer.md  production-quality.md  project-organization.md  scene-planning.md  troubleshooting.md  updaters-trackers.md  visual-design-catalog.md  visual-design-principles.md  voiceover.md
videos/attention_is_all_you_need/: plan.md  scene_01_hook.py  scene_02_qkv.py  scene_03_scaled_dot_product.py  scene_04_multi_head.py  scene_05_takeaway.py  voice_research_report.md
videos/attention_is_all_you_need/utils/: style.py
videos/fused_gromov_wasserstein/: plan.md  scene_01_hook.py  scene_02_problem.py  scene_03_optimal_transport.py  scene_04_gromov_wasserstein.py  scene_05_method.py  scene_06_takeaway.py
videos/fused_gromov_wasserstein/utils/: style.py
videos/neuronmm/: audit_report.md
videos/thehuzz/: scene_01_hook.py  scene_02_hardware_bugs.py  scene_03_verification_gap.py  scene_04_golden_model.py  scene_05_architecture.py  scene_06_mutation.py  scene_07_coverage_metrics.py  scene_08_optimization.py  scene_09_bug_detection.py  scene_10_results.py  scene_11_exploit.py  scene_12_takeaway.py  storyboard.md
videos/thehuzz/utils/: icons.py  style.py
videos/tribev2/: README.md  curriculum.md  research.md  scene_01_hook.py  scene_02_fragmentation.py  scene_03_encoding_basics.py  scene_04_frozen_backbones.py  scene_05_integration_transformer.py  scene_06_brain_mapping.py  scene_07_training_scale.py  scene_08_results.py  scene_09_modality_maps.py  scene_10_in_silico.py  scene_11_ablations.py  scene_12_limitations.py  storyboard.md
videos/tribev2/utils/: style.py
videos/v030_release/: scene_01_release.py
videos/v030_showcase/: scene_01_hook.py  scene_02_equation_decompose.py  scene_03_3d_extended.py  scene_03_3d_graph.py  scene_04_network_graph.py  scene_05_pipeline.py  scene_06_closer.py
videos/v030_showcase/utils/: style.py
